gobmkida/c1/clear_eye
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_eye/src/engine/optics.c:560:12: error: expected expression
*( _OWORD *)&eye->color = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_eye/src/engine/optics.c:560:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&eye->color = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_eye/src/obj/1/optics.o] Error 1
